--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -57,8 +57,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "viem": "latest"
+    "viem": "latest",
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
